[gd_scene load_steps=2 format=3 uid="uid://b8q5r2jnnak1x"]

[ext_resource type="Script" path="res://tests/WaveDirector_Isolated.gd" id="1_wave123"]

[node name="WaveDirector_Isolated" type="Node2D"]
script = ExtResource("1_wave123")

[node name="EnemyMultiMesh" type="MultiMeshInstance2D" parent="."]

[node name="UILayer" type="CanvasLayer" parent="."]

[node name="HUD" type="Control" parent="UILayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="InfoLabel" type="Label" parent="UILayer/HUD"]
layout_mode = 0
anchor_right = 0.5
anchor_bottom = 0.3
text = "Wave Director Test
Space: Start/Next wave
R: Reset waves
1-3: Manual spawn"